# DandyBotNative

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build.sh  clean.sh  main.cpp
res/: gameData.json  resources.qrc
sharedLib/: .gitignore  CMakeLists.txt  defs.c  defs.h  script.c  script.h
src/: Exception.hpp  KeyEvent.hpp  Keys.hpp  LaunchWidget.cpp  Window.cpp  consts.cpp  consts.hpp  launchWidget.cpp  launchWidget.hpp  main.cpp  util.hpp
src/logic/: Block.cpp  Block.hpp  Bot.cpp  Bot.hpp  Coin.cpp  Coin.hpp  GameAlgorithm.cpp  GameAlgorithm.hpp  GameBoard.cpp  GameBoard.hpp  GameData.cpp  GameData.hpp  GameLevel.cpp  GameLevel.hpp  Player.cpp  Player.hpp
src/view/: BoardWidget.cpp  BoardWidget.hpp  InfoWidget.cpp  InfoWidget.hpp  LaunchWidget.cpp  LaunchWidget.hpp  MainWidget.cpp  MainWidget.hpp  Window.cpp  Window.hpp
